[package]
name = "engine"
version = "0.1.0"
authors = ["Angel Landoni <angel.landoni.usa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.24.0"
wgpu = "0.7.0"
cgmath = "0.18.0"
futures = "0.3.4"
bytemuck = "1.5.1"
rand = "0.8.0"
crossbeam-queue = "0.3"
ecs = { path="../ecs" }
types = { path="../types" }
log = { path="../log" }