[package]
name = "engine"
version = "0.1.0"
authors = ["Angel Landoni <angel.landoni.usa@gmail.com>"]
edition = "2018"

[dependencies]
winit = "0.24.0"
wgpu = "0.7.0"
cgmath = "0.18.0"
futures = "0.3.4"
bytemuck = "1.5.1"
rand = "0.8.0"
crossbeam-queue = "0.3"
chrono = "0.4"

# Egui rendering.
egui = "0.8"
epi = "0.8.0"
egui_wgpu_backend = "0.4"
egui_winit_platform = "0.4"
egui_demo_lib = "0.8.1"


# Local dependencies.
ecs = { path="../ecs" }
types = { path="../types" }
log = { path="../log" }